@@ -1,5 +1,8 @@
 Release Notes
 
+* 4/13/2016
+  * fixed oldPandaIDs in JG for job cloning and multiple consumers
+
 * 4/12/2016
   * added splitRule to mapper attributes
 
